# bytehaul

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  pytest.ini
.github/: dependabot.yml
.github/skills/plan-driven-implementation/: SKILL.md
.github/skills/plan-driven-implementation/agents/: openai.yaml
.github/skills/release-version/: SKILL.md
.github/workflows/: publish-crates.yml  publish-pypi.yml  test.yml
benches/: storage_bench.rs
bindings/python/: Cargo.toml  README.md  pyproject.toml
bindings/python/python/bytehaul/: __init__.py
bindings/python/src/: lib.rs  lib_tests.rs
bindings/python/tests/: test_bytehaul.py
docs/: README.zh-CN.md  advanced.md  advanced.zh-CN.md  architecture.md  architecture.zh-CN.md  aria2-inspired-plan.zh-CN.md  migrate-reqwest-to-hyper.zh-CN.md  performance-investigation.zh-CN.md  python.zh-CN.md  troubleshooting.md  troubleshooting.zh-CN.md  tuning.md  tuning.zh-CN.md
docs/private/: pause-resume-eta-filename-plan.md  python-pyo3-binding-plan.md
example/: python_demo.py
experiments/: README.md
experiments/hyper-dl/: Cargo.toml
experiments/hyper-dl/src/: main.rs
experiments/isahc-dl/: Cargo.toml
experiments/isahc-dl/src/: main.rs
scripts/: coverage-windows.ps1
src/: checksum.rs  config.rs  error.rs  eta.rs  filename.rs  lib.rs  logging.rs  manager.rs  network.rs  progress.rs  rate_limiter.rs  scheduler.rs  session.rs
src/http/: mod.rs  request.rs  response.rs  source.rs  worker.rs
src/session/: mod.rs  multi.rs  range_validate.rs  resume.rs  retry.rs  single.rs
src/storage/: cache.rs  control.rs  file.rs  mod.rs  piece_map.rs  segment.rs  writer.rs
tests/: m10_boundary.rs  m1_basic.rs  m2_resume.rs  m3_multiworker.rs  m5_retry.rs  m6_features.rs  m7_fault_stress.rs  m8_pause_resume.rs  m9_auto_filename.rs
