[package]
name = "bytehaul"
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace]
members = ["bindings/python"]
resolver = "2"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream"] }
hickory-resolver = { version = "0.25", default-features = false, features = ["tokio", "system-config"] }
bytes = "1"
futures = "0.3"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
bincode = "1"
bitvec = { version = "1", features = ["serde"] }
parking_lot = "0.12"
tracing = "0.1"
crc32fast = "1"
sha2 = "0.10"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tracing-subscriber = "0.3"
warp = "0.3"
tempfile = "3"
rand = "0.8"
http = "1"
