[package]
name = "bytehaul"
version.workspace = true
edition = "2021"
description = "Async HTTP download library with resume, multi-connection, rate limiting, and checksum verification"
license = "MIT"
readme = "README.md"
repository = "https://github.com/triwinds/bytehaul"
documentation = "https://docs.rs/bytehaul"
keywords = ["download", "http", "async", "resume", "range"]
categories = ["asynchronous", "network-programming", "web-programming::http-client"]
publish = ["crates-io"]
exclude = [
    "/.claude/**",
    "/.github/**",
    "/.uv-cache/**",
    "/AGENTS.md",
    "/docs/private/**",
]

[workspace]
members = ["bindings/python"]
resolver = "2"

[workspace.package]
version = "0.1.2"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin)'] }

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["stream", "charset", "http2", "macos-system-configuration", "rustls-tls-native-roots"] }
hickory-resolver = { version = "0.25", default-features = false, features = ["tokio", "system-config"] }
bytes = "1"
futures = "0.3"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
bincode = "1"
bitvec = { version = "1", features = ["serde"] }
parking_lot = "0.12"
tracing = "0.1"
crc32fast = "1"
sha2 = "0.10"
fastrand = "2"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tracing-subscriber = "0.3"
warp = "0.3"
tempfile = "3"
rand = "0.8"
http = "1"