[package]
name = "bytehaul"
version.workspace = true
edition = "2021"
description = "Async HTTP download library with resume, multi-connection, rate limiting, and checksum verification"
license = "MIT"
readme = "README.md"
repository = "https://github.com/triwinds/bytehaul"
documentation = "https://docs.rs/bytehaul"
keywords = ["download", "http", "async", "resume", "range"]
categories = ["asynchronous", "network-programming", "web-programming::http-client"]
publish = ["crates-io"]
exclude = [
    "/.claude/**",
    "/.github/**",
    "/.uv-cache/**",
    "/AGENTS.md",
    "/docs/private/**",
]

[workspace]
members = ["bindings/python"]
resolver = "2"

[workspace.package]
version = "0.1.7"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin)'] }

[dependencies]
tokio = { version = "1", features = ["full"] }
hickory-resolver = { version = "0.25", default-features = false, features = ["tokio", "system-config", "https-ring", "rustls-platform-verifier"] }
hyper = { version = "1.9", features = ["client", "http1"] }
hyper-rustls = { version = "0.27", default-features = false, features = ["http1", "native-tokio", "rustls-platform-verifier", "tls12", "ring", "rustls-native-certs"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "tokio"] }
http-body-util = "0.1"
hyper-http-proxy = { version = "1.1", default-features = false, features = ["rustls-tls-native-roots"] }
bytes = "1"
futures = "0.3"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
bincode = "1"
bitvec = { version = "1", features = ["serde"] }
parking_lot = "0.12"
tracing = "0.1"
crc32fast = "1"
sha2 = "0.11"
sha1 = "0.11"
md-5 = "0.11"
fastrand = "2"
tower-service = "0.3"
url = "2"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tracing-subscriber = "0.3"
warp = "0.3"
tempfile = "3"
rand = "0.9"
http = "1"
criterion = { version = "0.8.2", features = ["html_reports"] }

[[bench]]
name = "storage_bench"
harness = false
