[package]
name = "bytehaul-python"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "_bytehaul"
crate-type = ["cdylib"]

[dependencies]
bytehaul = { path = "../.." }
pyo3 = { version = "0.23", features = ["abi3-py39", "extension-module"] }
tokio = { version = "1", features = ["full"] }