[package]
name = "bytehaul-python"
version.workspace = true
edition = "2021"
description = "Python extension module for the bytehaul async download library"
publish = false
license = "MIT"
readme = "README.md"
repository = "https://github.com/triwinds/bytehaul"
documentation = "https://github.com/triwinds/bytehaul/tree/main/bindings/python"

[lib]
name = "_bytehaul"
crate-type = ["cdylib"]

[dependencies]
bytehaul = { path = "../.." }
pyo3 = { version = "0.23", features = ["abi3-py39", "extension-module"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }