[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "bytehaul"
description = "Python bindings for the bytehaul Rust download library"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Rust",
]
dynamic = ["version"]

[tool.maturin]
python-source = "python"
module-name = "bytehaul._bytehaul"
