[workspace]

[package]
name = "hyper-dl"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "hyper-dl"
path = "src/main.rs"

[dependencies]
hyper = { version = "1.9", features = ["client", "http1"] }
hyper-rustls = { version = "0.27", default-features = false, features = ["http1", "native-tokio", "ring"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "tokio"] }
http-body-util = "0.1"
tokio = { version = "1", features = ["full"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
